--- a/RecipeAPI/RecipeAPI.csproj
+++ b/RecipeAPI/RecipeAPI.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,9 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ingredients.cs" />
     <Compile Include="Recipe.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecipeIngredients.cs" />
+    <Compile Include="RecipePreparation.cs" />
     <Compile Include="RecipeStore.cs" />
   </ItemGroup>
   <ItemGroup>
