--- a/RecipeAPI/RecipeAPI.csproj
+++ b/RecipeAPI/RecipeAPI.csproj
@@ -54,10 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
     <Compile Include="Ingredients.cs" />
     <Compile Include="Recipe.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecipeIngredients.cs" />
     <Compile Include="RecipeModel.cs" />
     <Compile Include="PreparationStep.cs" />
     <Compile Include="RecipeStore.cs" />
